--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,5 @@ kotlin.code.style=official
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
+REPO_USER=nikhilpednekar1
+REPO_PASSWORD=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"
