--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ kotlin.code.style=official
 android.useAndroidX=true
 android.nonTransitiveRClass=true
 REPO_USER=nikhilpednekar1
-REPO_PASSWORD=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"
+REPO_PASSWORD=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
